# surescan-take-home

./: .gitignore  1  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build-deb.yml
cpp_image_transformers/: CMakeLists.txt  pyproject.toml
cpp_image_transformers/src/: CMakeLists.txt  image_processor.cpp  main.cpp  module.cpp
cpp_image_transformers/src/image_transformers/: __init__.py
cpp_image_transformers/src/include/: image_processor.h
cpp_image_transformers/transformer_library/: CMakeLists.txt  MODIFICATION_REVIEW.md  modification_plan.json
cpp_image_transformers/transformer_library/cmake/: ImageProcessorConfig.cmake.in
cpp_image_transformers/transformer_library/include/: image_processor.h
cpp_image_transformers/transformer_library/src/: image_processor.cpp  main.cpp  python_interface.cpp
cpp_image_transformers/transformer_library_consumer/: CMakeLists.txt
cpp_image_transformers/transformer_library_consumer/src/: main.cpp
cpp_image_transformers_library/: CMakeLists.txt
cpp_image_transformers_library/transformer_library/: CMakeLists.txt
cpp_image_transformers_library/transformer_library/image_transformers/: __init__.py
cpp_image_transformers_library/transformer_library/include/: image_processor.h
cpp_image_transformers_library/transformer_library/src/: demo.cpp  image_processor.cpp  python_interface.cpp
cpp_image_transformers_library/transformer_library/test/: modification_plan.json  unit_tests.cpp
docs/: architecture.puml  image_processor.puml  uml.puml
python_cli_wrapper/: cli_interface.py  image_transformer_python_wrapper.py  main.py  modification_plan.json  rest_api.py
python_cli_wrapper/tests/: tests.py
python_wrappers/: cli.py  rest_api.py  surescan_image_transformer_core_wrapper.py  unit_tests.py
qt_gui/: CMakeLists.txt  README.md  files.json  main.cpp  surescan_gui.cpp  surescan_gui.h
qt_gui_wrapper/: CMakeLists.txt
qt_gui_wrapper/src/: main.cpp
typescript_web_ui/: Dockerfile  package.json
typescript_web_ui/public/: index.html  manifest.json
typescript_web_ui/src/: App.css  App.tsx  constants.ts  env.ts  index.css  index.tsx
typescript_web_ui/src/components/: Transformer.tsx
